[tool.poetry]
name = "iroha-renkinjutsu"
version = "0.1.0"
description = "Hyperleder Iroha V1 CLi Block Parser and API"
authors = ["Farren Jackson <farren@itbsoftware.co.za>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/johnfraney/flake8-markdown"
repository = "https://github.com/johnfraney/flake8-markdown"
keywords = ["iroha", "database", "sqlalchemy"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.19"
iroha = "^0.0.5"
pandas = "^1.1.1"
psycopg2-binary = "^2.8.5"
huey = "^2.3.0"
gevent = "^20.6.2"
rich = "^6.0.0"
click = "^7.1.2"
fastapi-sqlalchemy = "^0.1.6"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
pyotp = "^2.4.0"
tinydb = "^4.1.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bandit = "^1.6.2"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
